chore: limit lint and test runs to prs which include go files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,11 @@ on:
       - v*
     branches:
       - main
+    paths:
+      - "**.go"
   pull_request:
+    paths:
+      - "**.go"
 
 jobs:
   lint:
